# whitepaper

./: .gitignore  README.md  introduction.tex  main.tex  part3_2server.tex  part4_harmonypir.tex  part6_comparison.tex  part7_deployment.tex  part_evaluation.tex  part_merkle.tex  part_ratelimit.tex  refs.bib
benchmarks/: BENCHMARK_PROTOCOL.md  benchmark_dpf_round_latency.py  benchmark_harmony_hint_latency.py  benchmark_harmony_online_latency.py  benchmark_merkle_latency.py  benchmark_onionpir_synthetic.py  benchmark_scan_latency.py  collect_artifact_metrics.py  scan_file.rs
benchmarks/dpf_round_bench/: Cargo.toml
benchmarks/harmony_hint_bench/: Cargo.toml
benchmarks/harmony_online_bench/: Cargo.toml
benchmarks/harmony_online_bench/src/: main.rs
benchmarks/merkle_round_bench/: Cargo.toml
benchmarks/merkle_round_bench/src/: main.rs
benchmarks/results/: artifact_metrics.csv  artifact_tables.tex  dpf_round_costs.csv  dpf_round_latency_environment.json  dpf_round_latency_summary.csv  dpf_round_latency_table.tex  dpf_round_latency_trials.csv  environment.json  harmony_hint_latency_environment.json  harmony_hint_latency_summary.csv  harmony_hint_latency_table.tex  harmony_hint_latency_trials.csv  harmony_online_latency_environment.json  harmony_online_latency_summary.csv  harmony_online_latency_table.tex  harmony_online_latency_trials.csv  merkle_latency_environment.json  merkle_latency_summary.csv  merkle_latency_table.tex  merkle_latency_trials.csv  onionpir_synthetic_environment.json  onionpir_synthetic_stdout.txt  onionpir_synthetic_summary.csv  (+4 more)
(+2 files in other folders)
